moved all directories to the "src" directory

--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ html {
 }
 
 body { 
-    background-image: url(../imagens/background.png);
+    background-image: url('./imagens/background.png');
     background-repeat: repeat;
 }
 
